--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "expect": "^24.1.0",
     "express": "^4.16.4",
+    "moment": "^2.24.0",
+    "nodemon": "^1.18.10",
     "socket.io": "^2.2.0"
   },
   "devDependencies": {
